[package]
name = "morganite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.0", features = ["full"] }
serde = { version = "1.0.130", features = ["derive"] }
bytes = { version = "1.5.0", features = ["serde"] }
log = "0.4.20"
simple_logger = "4.3.0"
crc32fast = "1.3.2"