[package]
name = "rnp2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc32fast = "1.4.2"
futures = "0.3.30"
serde = {version = "1.0.203", features = ["derive"]}
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
tokio-serde-json = "0.3.0"
tokio-stream = "0.1.15"
tokio-util = {version = "0.7.11", features = ["codec"]}
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
