[package]
name = "rnp2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc32fast = "1.4.2"
crossterm = {version = "0.27.0", features = ["event-stream"]}
futures = "0.3.30"
ratatui = "0.26.3"
serde = {version = "1.0.203", features = ["derive"]}
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
tokio-serde-json = "0.3.0"
tokio-stream = "0.1.15"
tokio-util = {version = "0.7.11", features = ["codec"]}
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-appender = "0.2.3"
tui-logger = "0.11.1"
tui-nodes = "0.4.0"
